scripts/nullness/original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8.txt
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Selection.java:52: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: T extends @Initialized @Nullable Object
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Selection.java:211: error: [argument] incompatible argument for parameter removed of SelectionIterator constructor.
			this(source, null);
			             ^
  found   : null (NullType)
  required: @Initialized @NonNull Collection<T extends @Initialized @Nullable Object>
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Selection.java:221: error: [assignment] incompatible types in assignment.
			this.current = null;
			               ^
  found   : null (NullType)
  required: T extends @Initialized @Nullable Object
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Selection.java:222: error: [method.invocation] call to nextSelected() not allowed on the given receiver.
			this.next = nextSelected();
			                        ^
  found   : @Initialized @NonNull Selection.@UnderInitialization @NonNull SelectionIterator
  required: @Initialized @NonNull Selection.@Initialized @NonNull SelectionIterator
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Selection.java:238: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: T extends @Initialized @Nullable Object
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Zeitraum.java:29: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Date
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Zeitraum.java:36: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Date
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Termin.java:24: error: [initialization.fields.uninitialized] the constructor does not initialize fields: typus, ort, zeitraum, posten, teilnehmer, orig
	private Termin() {
	        ^
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Termin.java:34: error: [assignment] incompatible types in assignment.
		this.orig = null;
		            ^
  found   : null (NullType)
  required: @Initialized @NonNull Termin
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Band.java:36: error: [assignment] incompatible types in assignment.
		this.guv = new GuV(this);
		           ^
  found   : @UnderInitialization(GuV.class) @NonNull GuV
  required: @Initialized @NonNull GuV
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Band.java:36: error: [argument] incompatible argument for parameter band of GuV constructor.
		this.guv = new GuV(this);
		                   ^
  found   : @UnderInitialization @NonNull Band
  required: @Initialized @NonNull Band
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Test.java:336: error: [dereference.of.nullable] dereference of possibly-null reference vorschlaege.poll()
				vorschlaege.poll().accept(mitglied);
				                ^
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Test.java:355: error: [dereference.of.nullable] dereference of possibly-null reference vorschlaege.poll()
				vorschlaege.poll().accept(mitglied);
				                ^
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Test.java:673: error: [dereference.of.nullable] dereference of possibly-null reference m.getTerminvorschlaege().poll()
		m.getTerminvorschlaege().poll().decline(m, "Ne, nicht mit mir!!!");
		                             ^
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Test.java:681: error: [dereference.of.nullable] dereference of possibly-null reference vorschlaege.poll()
				vorschlaege.poll().accept(mitglied);
				                ^
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Programm.java:31: error: [method.invocation] call to read() not allowed on the given receiver.
				read();
				    ^
  found   : @UnderInitialization @NonNull Programm
  required: @Initialized @NonNull Programm
../original/url97a7a8bbec_PPilger_OOP_2_tgz-pJ8-TestJ8/src/Programm.java:52: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Band
17 errors
